--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
 
-<h1>Round Range Slider</h1>
+<h1 id="text">Round Range Slider</h1>
 
 <div class="slidecontainer">
   <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
@@ -54,10 +54,12 @@
 <script>
 var slider = document.getElementById("myRange");
 var output = document.getElementById("demo");
+var text = document.getElementById("text");
 output.innerHTML = slider.value;
 
 slider.oninput = function() {
   output.innerHTML = this.value;
+   text.style.fontSize = this.value + 'px';
 }
 </script>
 
