slider component completed?

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ h2 {
 }
 .slidecontainer {
   width: 50%;
+  height: 100vh;
 }
 
 .slider {
@@ -57,11 +58,11 @@ h2 {
 <body>
 
 <h1 id="h1">Round Range Slider</h1>
-<!-- <h2 id="h2">Round Range Slider</h2>
+<h2 id="h2">Round Range Slider</h2>
 <h3 id="h3">Round Range Slider</h3>
 <h4 id="h4">Round Range Slider</h4>
 <h5 id="h5">Round Range Slider</h5>
-<h6 id="h6">Round Range Slider</h6> -->
+<h6 id="h6">Round Range Slider</h6> 
 <div class="slidecontainer">
   <input type="range" min="1" max="100" value="0" class="slider" id="myRange">
   <p>Value: <span id="demo"></span></p>
@@ -71,23 +72,28 @@ h2 {
 var slider = document.getElementById("myRange");
 var output = document.getElementById("demo");
 var h1 = document.getElementById("h1");
-// var h2 = document.getElementById("h2");
-// var h3 = document.getElementById("h3");
-// var h4 = document.getElementById("h4");
-// var h5 = document.getElementById("h5");
-// var h6 = document.getElementById("h6");
+var h2 = document.getElementById("h2");
+var h3 = document.getElementById("h3");
+var h4 = document.getElementById("h4");
+var h5 = document.getElementById("h5");
+var h6 = document.getElementById("h6");
 output.innerHTML = slider.value;
 var fontSizeH1 = parseFloat(window.getComputedStyle(h1, null).getPropertyValue('font-size'));
-// var fontSizeH2 = parseFloat(window.getComputedStyle(h2, null).getPropertyValue('font-size'));
-// var fontSizeH3 = parseFloat(window.getComputedStyle(h3, null).getPropertyValue('font-size'));
-// var fontSizeH4 = parseFloat(window.getComputedStyle(h4, null).getPropertyValue('font-size'));
-// var fontSizeH5 = parseFloat(window.getComputedStyle(h5, null).getPropertyValue('font-size'));
-// var fontSizeH6 = parseFloat(window.getComputedStyle(h6, null).getPropertyValue('font-size'));
-console.log(fontSizeH1); 
+var fontSizeH2 = parseFloat(window.getComputedStyle(h2, null).getPropertyValue('font-size'));
+var fontSizeH3 = parseFloat(window.getComputedStyle(h3, null).getPropertyValue('font-size'));
+var fontSizeH4 = parseFloat(window.getComputedStyle(h4, null).getPropertyValue('font-size'));
+var fontSizeH5 = parseFloat(window.getComputedStyle(h5, null).getPropertyValue('font-size'));
+var fontSizeH6 = parseFloat(window.getComputedStyle(h6, null).getPropertyValue('font-size'));
+
 
 slider.oninput = function() {
   output.innerHTML = this.value;
-  h1.style.fontSize = parseFloat(fontSizeH1 / this.value) + 'px';
+  h1.style.fontSize = parseFloat((fontSizeH1 * this.value) / 100) + 'px';
+  h2.style.fontSize = parseFloat((fontSizeH2 * this.value) / 100) + 'px';
+  h3.style.fontSize = parseFloat((fontSizeH3 * this.value) / 100) + 'px';
+  h4.style.fontSize = parseFloat((fontSizeH4 * this.value) / 100) + 'px';
+  h5.style.fontSize = parseFloat((fontSizeH5 * this.value) / 100) + 'px';
+  h6.style.fontSize = parseFloat((fontSizeH6 * this.value) / 100) + 'px';
 }
 </script>
 
